  
  - New Features:
     - Button has different appearance when disabled.
     - CheckBox has different appearance when disabled.
     - ContextMenuItem has different appearance when disabled.
     - CycleButton has different appearance when disabled.
     - RadioButton has different appearance when disabled.
     - Added Keyboard gadget.
     - Added all missinh 7-bit ASCII glyphs to sysfont.
     

  V0.34 (20080702)
  
  - Fixes:
     - All gadgets have protected copy constructors.
     - Added destructor to DimmedScreen class.
     - Replaced SuperBitmap::drawLine() with a function that works correctly.
     - Fixed crash in SuperBitmap::floodFill() when pixel stack overflowed the
       DS' stack.
     - Fixed bug in SuperBitmap::floodFill() that prevented rows above the
       initial click point being filled and occasionally froze the DS.
     - Fixed path null pointer crash in FileRequester constructor.
     - SuperBitmap::drawHorizLine() no longer tries to DMA_Force() if the width
       of the line is 1.
     - Fixed size of data stored in SuperBitmap floodFill's stack.
     - Removed bitshifts from Screen::Drag() that would prevent resizing the
       screen on alternative platforms.
     - Windows can no longer be dragged vertically out of non-permeable screens
       that are themselves dragged down.
     - Fixed crash when dragging screen in SDL build.
     - Added John's fix to limit SDL screen dragging to bottom screen.
     - Gadget::lowerGadgetToBottom() does not try to move decorations.
     - Gadget::raiseGadgetToTop() only invalidates the rect cache of any gadgets
       it collides with.
     - AmigaWindow controls how it moves to the top of the parent gadget stack
       rather than the Screen gadget.
  
  - New Features:
     - FileRequester tidied up and flags parameter added to constructor.
     - Added FileRequester demo to examples directory.
     - Added DimmedScreen demo to examples directory.
     - Fixes to example makefiles.